-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.0-beta2
-
None
-
2387e9e37 (11.0), 733279e01 (11.0), 6f9a97fd1 (11.0), 4605bf57d (11.0)
The "Stage for installation" option in the CMake build step, which is introduced with Qt Creator 11, relies on the presence of an "install" CMake target. This option is selected by default, when an Android kit is used for a project.
The build system of Qt for Android does not create an "install" CMake target. Therefore, a pre-selected "Stage for installation" option in the CMake build step causes a build failure.
Build error
22:00:30: Starting: "C:\Program Files\CMake\bin\cmake.exe" --build C:/Users/alportal/dev/qtcreator-bug-snippets/QTCREATORBUG-25030/{f1977a95-d487-4519-844f-f315db646d77} --target all install
ninja: error: unknown target 'install'
22:00:30: The process "C:\Program Files\CMake\bin\cmake.exe" exited with code 1.
Error while building/deploying project qtwidgets-cmake (kit: Android Qt 6.5.1 Clang x86_64)
When executing step "Build"
- relates to
-
QTCREATORBUG-29475 "Stage for installation" option in CMake build step for iOS Simulator breaks build
-
- Closed
-