CMakeProjectManager: Deselect "Stage for installation" for iOS Simulator

There is no CMake install target for iOS Simulator. Therefore, the
"Stage for installation" option needs to be deseleceted, like it is
being done for iOS device.

Amends: 2387e9e37aeb5b4acf6b2b1bdb1f8f047e23c1d4

Fixes: QTCREATORBUG-29293
Fixes: QTCREATORBUG-29475
Change-Id: I6406446534c1ddedbf01cdab4d074bddc44dc495
Reviewed-by: hjk <hjk@qt.io>