src/plugins/cmakeprojectmanager/cmakebuildstep.cpp
@@ -188,6 +188,7 @@ static bool supportsStageForInstallation(const Kit *kit)
     return runDevice->id() != buildDevice->id()
            && runDevice->type() != Android::Constants::ANDROID_DEVICE_TYPE
            && runDevice->type() != Ios::Constants::IOS_DEVICE_TYPE
+           && runDevice->type() != Ios::Constants::IOS_SIMULATOR_TYPE
            && runDevice->type() != WebAssembly::Constants::WEBASSEMBLY_DEVICE_TYPE;
 }
 
